--- a/blog.html
+++ b/blog.html
@@ -18,9 +18,12 @@ title: blog
 <h1>📚 Catatan Mata Kuliah Web Dasar</h1>
 <ul>
   {% for post in site.posts reversed %}
-    <li>
-      <h3><a href="{{ post.url }}">{{ post.title }}</a><br></h3>
+    <ol>
+      <div class="card">
+      <h3><a href="{{ post.url | relative_url }}" style="text-decoration:none; color:inherit;">{{ post.title }}</a></h3>
       <small>🗓 {{ post.date | date: "%d %b %Y" }}</small>
-    </li>
+      <p>{{ post.description }}</p>
+      </div>
+    </ol>
   {% endfor %}
 </ul>
